kvbufrd (3.0.9~rc2-1) xenial; urgency=low
  * Actually add encoder 302045 to the list of encoders.
  
 -- Kvalobs <kvalobs@met.no>  Sat, 30 Jan 2021 07:45:00 +0100

kvbufrd (3.0.9~rc1-1) xenial; urgency=low
  * Encode radiation in template TM307079
  
 -- Kvalobs <kvalobs@met.no>  Fri, 29 Jan 2021 16:00:00 +0100


kvbufrd (3.0.8-1) xenial; urgency=low
  * Only save BUFR in the cachedb if loglevel for the station is greater
    or equal to DEBUG.
  * disable VACUUM (compacting) of the cachedb.

 -- Kvalobs <kvalobs@met.no>  Thu, 30 Jul 2020 08:30:00 +0200


kvbufrd (3.0.8~rc1-1) xenial; urgency=low
  * Only save BUFR in the cachedb if loglevel for the station is greater
    or equal to DEBUG.
  * disable VACUUM (compacting) of the cachedb.

 -- Kvalobs <kvalobs@met.no>  Wed, 29 Jul 2020 16:30:00 +0200


kvbufrd (3.0.7-1) xenial; urgency=low
  * Fix kvbufrconf for SVV stations.
  * Some minor fixes in startup code. Do not reload data allready loaded. 
  * Reduce number of recomputation of BUFR when a timeserie is changed.
  * Rwrite to use standard library for shared_ptr, thread, mutex and 
    condition_variable instead of boost. 
  * Implement a priority queue for generating BUFR (bufrworker). At
    the momment newst observations is comuted first. Most of the time 
    the queue will have only one observation in flight. 
  * Fix a deadlock at exit. 

 -- Kvalobs <kvalobs@met.no>  Sun, 5 Jul 2020 13:00:00 +0200

kvbufrd (3.0.7~rc4-1) xenial; urgency=low
  * Fix kvbufrconf for SVV stations.
  * Some minor fixes in startup code. Do not reload data allready loaded. 
  * Reduce number of recomputation of BUFR when a timeserie is changed.
  * Rwrite to use standard library for shared_ptr, thread, mutex and 
    condition_variable instead of boost. 
  * Implement a priority queue for generating BUFR (bufrworker). At
    the momment newst observations is comuted first. Most of the time 
    the queue will have only one observation in flight. 
  * Fix a deadlock at exit. 
